--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/Mtendere_Logo.png" width="30" height="30" class="d-inline-block align-top"
+            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top"
                 alt="Mtendere Logo">
-            Mtendere Education Consult
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
