--- a/blog.html
+++ b/blog.html
@@ -3,114 +3,100 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description"
-        content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
-    <meta name="keywords"
-        content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad.">
+    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education">
     <meta name="author" content="Mtendere Education Consult">
 
     <!-- Bootstrap 5 & Custom Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
-    <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/dist/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/scss/style.scss">
-    <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
-    <link rel="stylesheet" href="assets/scss/_variables.scss">
-
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Owl Carousel CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+
+    <!-- Owl Carousel JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
 </head>
 
 <body>
-    <div id="loadingSpinner">
-        <div class="spinner"></div>
-    </div>
-
-    <!-- Mobile Menu -->
-    <div class="site-mobile-menu">
-        <div class="site-mobile-menu-header">
-            <div class="site-mobile-menu-close">
-                <span class="icofont-close js-menu-toggle"></span>
-            </div>
-        </div>
-        <div class="site-mobile-menu-body"></div>
-    </div>
-
     <!-- Top Bar -->
-    <div class="top-bar py-2 bg-light">
+    <div class="top-bar py-2">
         <div class="container">
             <div class="row justify-content-between">
-
                 <div class="col-md-8 d-flex">
-                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
-                        <i class="fa fa-question-circle mr-1"></i> Have a Question?
+                    <a href="#faqModal" class="small me-4" data-bs-toggle="modal">
+                        <i class="fa fa-question-circle me-1"></i> Have a Question?
                     </a>
-                    <a href="tel:" class="small text-dark mr-4">
-                        <i class="fa fa-phone mr-1"></i>
+                    <a href="tel:+265999360325" class="small text-dark me-4">
+                        <i class="fa fa-phone me-1"></i> +265999360325
                     </a>
+                    <div class="social-icons">
+                        <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i
+                                class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i
+                                class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="linkedin.com/in/mtendere-education-consult-1b44a9345"><i
+                                class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="https://www.instagram.com/mecmw265/"><i
+                                class="fab fa-2x fa-instagram"></i></a>
+                    </div>
                     <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
-                        <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
+                        <i class="fa fa-envelope me-1"></i> mtendereeduconsult@gmail.com
                     </a>
                 </div>
-
-                <div class="col-md-4 d-flex justify-content-end align-items-center">
-                    <select class="form-select form-select-sm mr-3" id="language-select">
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                        <option value="fr">Français</option>
-                    </select>
-                </div>
-
             </div>
         </div>
     </div>
+    <!-- End Top Bar -->
 
-    <!-- Navigation -->
-    <nav class="site-nav sticky-top shadow-sm " id="main-navbar">
-        <div class="container">
-            <div class="d-flex justify-content-between py-3">
+    <!-- Navigation Bar -->
+    <nav class="navbar sticky-top navbar-expand-lg">
+        <a class="navbar-brand" href="#">
+            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top"
+                alt="Mtendere Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <a href="index.html" class="logo">
-                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 150px; height: 2rem;">
-                </a>
-
-                <ul class="site-menu js-clone-nav list-unstyled m-0">
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link active">About</a></li>
-                    <li><a href="course.html" class="nav-link active">Scholarships</a></li>
-                    <li><a href="service.html" class="nav-link active">Services</a></li>
-                    <li><a href="team.html" class="nav-link active">Team</a></li>
-                    <li><a href="blog.html" class="nav-link active">Blog</a></li>
-                    <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
-                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
-                    <li><a href="event.html" class="nav-link active">Events</a></li>
-                </ul>
-
-                <a href="#"
-                    class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
-                    data-toggle="collapse" data-target="#main-navbar">
-                    <span></span>
-                </a>
-                <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll now
-                </a>
-            </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+            <ul class="navbar-nav">
+                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Scholarships</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item">
+                    <button class="btn btn-sm btn-outline-primary ml-2" data-toggle="modal" data-target="#formModal">
+                        Enroll now
+                    </button>
+                </li>
+            </ul>
         </div>
     </nav>
+
+    <!-- End Navigation Bar -->
 
     <!-- Header Start -->
     <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom"
