--- a/index.html
+++ b/index.html
@@ -1586,6 +1586,32 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="assets/js/custom.js"></script>
+
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.animateNumber.min.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.ts"></script>
+
+    <script src="assets/js/core/aosInit.js"></script>
+    <script src="assets/js/core/index.js"></script>
+    <script src="assets/js/core/jarallaxInit.js"></script>
+    <script src="assets/js/core/mobileMenu.js"></script>
+    <script src="assets/js/core/owlCarousels.js"></script>
+    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
+
+    <!-- SwiperJS Script -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- AOS Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </body>
 
 </html>
