--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
                 <!-- Program 2 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                    <div class="custom-media border rounded shadow-sm p-3">
                         <a href="#"><img src="assets/imgs/businessman-with-chart.jpg" alt="Engineering Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
@@ -609,12 +609,12 @@
                 </div>
             </div>
             <div class="text-center mt-5">
-                <a href="#" class="btn btn-primary btn-lg">View all programs</a>
+                <a href="service.html" class="btn btn-primary btn-lg">View all programs</a>
             </div>
         </div>
     </div>
 
-    <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg');">
+    <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center; opacity: 4%;">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Why Choose Us?</h6>
