--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="row">
                 <!-- Program 1 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                    <div class="custom-media border rounded shadow-sm p-3">
                         <a href="#"><img src="assets/imgs/medium-shot-doctor-with-gloves.jpg" alt="Medical Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
@@ -616,7 +616,7 @@
         </div>
     </div>
 
-    <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center; opacity: 4%;">
+    <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center;">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Why Choose Us?</h6>
