--- a/blog.html
+++ b/blog.html
@@ -82,11 +82,13 @@
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
             <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Scholarships</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 <li class="nav-item">
                     <button class="btn btn-sm btn-outline-primary ml-2" data-toggle="modal" data-target="#formModal">
                         Enroll now
@@ -357,7 +359,7 @@
     </section>
 
     <!-- Footer Start -->
-    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
+    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5">
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5">
@@ -393,42 +395,46 @@
                         1st Floor Room 1,<br>
                         Lilongwe<br>
                     </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
-                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i> +265999360325 | 0887209531</p>
+                    <p><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                        <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i
+                                class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i
+                                class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="linkedin.com/in/mtendere-education-consult-1b44a9345"><i
+                                class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="https://www.instagram.com/mecmw265/"><i
+                                class="fab fa-2x fa-instagram"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 mb-4">
                     <div class="widget">
-                        <h3>Gallery</h3>
+                        <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="#" alt="team"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
+                                        alt="application" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
+                                        height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
+                                        alt="Scholarships" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
+                                        height="72"></a>
                             </li>
                         </ul>
                     </div> <!-- /.widget -->
@@ -436,21 +442,21 @@
 
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">Services</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="study-abroad-programmes.html" class="text-white">Programmes</a></li>
-                        <li><a href="study-abroad-application.html" class="text-white">Application Process</a></li>
-                        <li><a href="study-abroad-scholarships.html" class="text-white">Scholarships</a></li>
-                        <li><a href="study-abroad-visa.html" class="text-white">Visa Information</a></li>
-                        <li><a href="study-abroad-testimonials.html" class="text-white">Testimonials</a></li>
-                        <li><a href="study-abroad-blog.html" class="text-white">Blog</a></li>
-                        <li><a href="study-abroad-contact.html" class="text-white">Contact Us</a></li>
+                    <ul class="list-unstyled" style="list-style: none;">
+                        <li><a href="course.html" class="text-white">Programmes</a></li>
+                        <li><a href="#" class="text-white">Application Process</a></li>
+                        <li><a href="course.html" class="text-white">Scholarships</a></li>
+                        <li><a href="visa.html" class="text-white">Visa Information</a></li>
+                        <li><a href="testimonials.html" class="text-white">Testimonials</a></li>
+                        <li><a href="blog.html" class="text-white">Blog</a></li>
+                        <li><a href="contact.html" class="text-white">Contact Us</a></li>
                     </ul>
                 </div>
 
                 <!-- Footer Column 3: News and Blog -->
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">News & Updates</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled" style="list-style: none;">
                         <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
                         <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
                         </li>
@@ -459,8 +465,8 @@
                 </div>
 
                 <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Quick Links</h3>
-                    <div class="d-flex flex-column justify-content-start">
+                    <h5 class="text-white mb-4">Quick Links</h5>
+                    <div class="d-flex flex-column justify-content-start" style="list-style: none;">
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
                             Condition</a>
@@ -474,29 +480,27 @@
     </div>
     <div class="copyrights">
         <div class="container">
-            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</p>
         </div>
     </div>
-
-    <!-- Google reCAPTCHA -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Footer End -->
 
     <!-- Floating WhatsApp Chat Button -->
-    <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank"
+        style="@keyframes bounce {0%, 100% {transform: translateY(0);}50% {transform: translateY(-10px);}}">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
 
     <!-- Back to Top Button -->
     <button id="backToTop" title="Back to top">↑</button>
 
-    <!-- Chatbot Integration (Placeholder) -->
-    <div id="backToTop" class="chatbot-icon">
-        <button class="btn btn-info" id="chatbot-btn">
-            <i class="fas fa-comments"></i> Chat with us!
-        </button>
-    </div>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <!-- Footer End -->
+    <script src="assets/js/custom.js"></script>
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
