--- a/index.html
+++ b/index.html
@@ -1499,27 +1499,27 @@
                     <div class="widget">
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/students/Caroline.jpg" alt="team"
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="#" alt="team"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/ChandigarhUniverstiy.png" alt="admission"
+                            <li><a class="instagram-item" href="#"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
+                            <li><a class="instagram-item" href="#"
                                     data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
                                         alt="application" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
+                            <li><a class="instagram-item" href="#"
                                     data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
                                         height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
+                            <li><a class="instagram-item" href="#"
                                     data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
                                         alt="Scholarships" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
+                            <li><a class="instagram-item" href="#"
                                     data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
                                         height="72"></a>
                             </li>
@@ -1529,7 +1529,7 @@
 
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">Services</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled" style="list-style: none;">
                         <li><a href="course.html" class="text-white">Programmes</a></li>
                         <li><a href="#" class="text-white">Application Process</a></li>
                         <li><a href="course.html" class="text-white">Scholarships</a></li>
@@ -1543,7 +1543,7 @@
                 <!-- Footer Column 3: News and Blog -->
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">News & Updates</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled" style="list-style: none;">
                         <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
                         <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
                         </li>
@@ -1553,7 +1553,7 @@
 
                 <div class="col-md-4 mb-5">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <div class="d-flex flex-column justify-content-start">
+                    <div class="d-flex flex-column justify-content-start" style="list-style: none;">
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
                             Condition</a>
