--- a/blog.html
+++ b/blog.html
@@ -413,7 +413,7 @@
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
                             <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="#" alt="team"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="#"
